# shelfwise

./: .dockerignore  .env.example  .gitignore  AUDIT_AND_IMPLEMENTATION_BACKLOG.md  CLIENT_INTAKE_RUNBOOK.md  CODEX.md  DEMO_RUNBOOK.md  DIGITAL_TWIN_RESEARCH_AND_IMPLEMENTATION_PLAN.md  DROPLET_BOOTSTRAP.md  Dockerfile  ENGINEERING_AUDIT_REPORT.md  FINE_TUNING_JUPYTER_AUDIT.md  HANDOFF.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  JUDGE.md  LICENSE  Makefile  PRODUCT_READINESS_PLAN.md  README.md  TEST_SUITE_CRITIQUE.md  Things that needs to be implemented.md  docker-compose.production.yml  docker-compose.yml  pyproject.toml  requirements.txt
advisor-plans/: 001-first-class-data-domain.md  002-route-operational-facts.md  003-isolate-hitl-learning-ledgers.md  004-exact-live-twin-queries.md  005-prove-domain-integrity.md  README.md
capabilities/: README.md  manifest.json  manifest.schema.json  policy.json  profiles.json
configs/: train_gemma4_multimodal.yaml
docker/: nginx.conf
docs/: mi300x-recreate-runbook.md  model-training.md
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  vite.config.ts
notebooks/: 00_shelfwise_llm_training_bootstrap.ipynb  01_shelfwise_full_test_harness.ipynb  02_shelfwise_gemma_finetune.ipynb  03_shelfwise_stress_test.ipynb
plans/: 001-restore-ci-and-evidence-truth.md  002-enforce-production-security-perimeter.md  003-add-deployed-topology-shakedown.md  004-add-relevance-aware-chat-context.md  005-bound-recovery-capsules.md  006-break-the-application-test-campaign.md  007-guard-and-bound-intelligence-api.md  008-make-edge-batch-receipts-recoverable.md  009-enforce-roles-for-scenario-routes.md  010-secure-and-rate-limit-multimodal-routes.md  011-make-learning-threshold-updates-monotonic.md  README.md
reports/: ORIGINAL_PROBLEM_COVERAGE.md  SUBMISSION_EVIDENCE_REPORT.md  break_campaign_20260714T203355Z.md  break_campaign_20260714T223354Z.baseline.json  break_campaign_20260714T231100Z.fixed-baseline.json  break_campaign_20260714T231445Z.repaired-baseline.json  break_campaign_20260714T231607Z.green-baseline.json  break_campaign_20260714T232000Z.saturation.json  break_campaign_20260715T000000Z.md  fleet-scale-shakedown-20260720.json  full_capacity_v2_revalidation.json
scripts/: __init__.py  bootstrap_mi300x_vllm.sh  client_backup.sh  client_restore_verify.sh  compare_capability_manifests.py  deployment_shakedown.py  fleet_scale_eval.py  fleet_scale_shakedown.py  inference_architecture_eval.py  jupyter_gemma4_bootstrap.sh  jupyter_gemma4_check.sh  phase_c_races.py  phase_c_ramp.py  phase_c_saturation.py  pod_start.sh  session_capsule.py  smoke.ps1  smoke.py  track3_prescreen.py  validate_full_system_artifact.py
tests/: _world_test_support.py  conftest.py  test_agent_orchestration.py  test_agent_role_coverage.py  test_agentic_cold_chain_cascade.py  test_agentic_golden_cascade.py  test_agentic_guardrail_cascades.py  test_agentic_http_errors.py  test_agentic_operational_twin.py  test_agentic_procurement_cascade.py  test_agentic_sales_cascade.py  test_audit_fixes.py  test_autopilot.py  test_backend_observability_tools.py  test_benchmark_adapters.py  test_benchmark_config.py  test_benchmark_reporting.py  test_benchmark_runner.py  test_candidate_factory.py  test_candidate_history.py  test_candidate_history_api.py  test_candidate_store.py  test_capability_contract.py  test_catalog_worldgen.py  test_chat_conversations.py  (+97 more)
(+260 files in other folders)
