[project]
name = "shelfwise"
version = "0.1.0"
description = "AMD ACT II hackathon app: AI operating layer for retail waste, inventory, and cold-chain decisions."
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.6",
]
training = [
  "accelerate>=1.0",
  "datasets>=3.0",
  "peft>=0.13",
  "tokenizers>=0.20",
  "transformers>=4.45",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
  "src/shelfwise",
  "src/shelfwise_action",
  "src/shelfwise_backend",
  "src/shelfwise_contracts",
  "src/shelfwise_data",
  "src/shelfwise_decision_science",
  "src/shelfwise_eval",
  "src/shelfwise_inference",
  "src/shelfwise_memory",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
